# clean_bot

./: .gitignore  Clean_Bot_Flow_Diagrams.md  Clean_Bot_Learning_Guide.md  HOW_IT_WORKS.md  LAUNCH_PROCESS_FLOW.md  README.md  check_lidar.py  frames_2026-01-05_00.21.14.gv  server.py
ARCHIVE/clean_bot_gazebo/: CMakeLists.txt
ARCHIVE/clean_bot_gazebo/clean_bot_navigation/: CMakeLists.txt  package.xml
ARCHIVE/clean_bot_gazebo/clean_bot_navigation/config/: mapper_params_online_async.yaml  nav2_params.yaml
ARCHIVE/clean_bot_gazebo/clean_bot_navigation/launch/: navigation.launch.py
ARCHIVE/clean_bot_gazebo/launch/: sim.launch.py
ARCHIVE/clean_bot_gazebo/my_robot_slam/: README.md  package.xml
ARCHIVE/clean_bot_gazebo/my_robot_slam/arduino_code/: arduino_ros_node.ino
ARCHIVE/clean_bot_gazebo/my_robot_slam/config/: docking_demo.rviz  mapper_params_online_async.yaml  nav2_params.yaml
ARCHIVE/clean_bot_gazebo/my_robot_slam/launch/: docking_simulation.launch.py  exploration_mission.launch.py
ARCHIVE/clean_bot_gazebo/my_robot_slam/scripts/: arduino_bridge.py  cmd_vel_mux.py  complex_mission.py  coverage_planner.py  dock_detector.py  simple_simulation.py
ARCHIVE/clean_bot_gazebo/my_robot_slam/test/: test_arduino_bridge.py  test_coverage_planner.py  test_docking_logic.py  test_explorer_logic.py  test_imu_driver.py  test_simulation_integration.py  test_system_integration.py
ARCHIVE/clean_bot_gazebo/my_robot_slam/urdf/: my_robot.urdf
clean_bot_description/: CMakeLists.txt  README.md  package.xml
clean_bot_description/config/: robot_visualization.rviz
clean_bot_description/launch/: rsp.launch.py  visualize_robot.launch.py  visualize_rviz_only.launch.py
clean_bot_description/urdf/: gazebo_control.xacro  imu.xacro  inertial_macros.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ultrasonic.xacro
clean_bot_gazebo/: CMakeLists.txt  package.xml
clean_bot_gazebo/launch/: sim.launch.py
clean_bot_gazebo/test/: test_sim_launch.py
clean_bot_gazebo/worlds/: apartment.world  room.world
clean_bot_hardware/: CMakeLists.txt  README.md  package.xml
clean_bot_hardware/arduino/: arduino_motor_relay.ino
clean_bot_hardware/clean_bot_hardware/: __init__.py  arduino_driver.py  cleaning_switch_node.py  emergency_stop.py  imu_odom_broadcaster.py  imu_publisher_node.py  low_obstacle_detector.py  rplidar_test.py  scan_throttle.py  simple_imu_driver.py
clean_bot_hardware/config/: ekf.yaml  mapper_params_online_async.yaml  nav2_params.yaml  rplidar_a1.yaml  rplidar_rviz.rviz
clean_bot_hardware/launch/: imu.launch.py  odom.launch.py  robot_bringup.launch.py  rplidar_test.launch.py  rviz_lidar.launch.py  sensors.launch.py  slam.launch.py  test_lidar.launch.py
clean_bot_hardware/scripts/: check_lidar.py  relay_activate.py  relay_deactivate.py  servo_off.py  servo_on.py  start_lidar.sh  test_gpio.py
clean_bot_hardware/test/: test_hardware_logic.py
clean_bot_mission/: README.md  package.xml  setup.cfg  setup.py
clean_bot_mission/clean_bot_mission/: adaptive_coverage.py  coverage_mission.py  exploration.py  frontier_explorer.py  full_mission.py  mission.py  scan_monitor.py  simple_coverage.py
clean_bot_mission/clean_bot_mission/webapp/: __init__.py  __main__.py  app.py  no_go_zones.json
clean_bot_mission/clean_bot_mission/webapp/templates/: index.html
clean_bot_mission/launch/: cleaning_mission.launch.py  scan_room.launch.py
clean_bot_mission/scripts/: TELEGRAM_README.md  telegram_bridge.py  test_coverage.sh  test_helper.py
clean_bot_mission/test/: test_integration.py  test_mission_logic.py  test_webapp.py
clean_bot_navigation/: CMakeLists.txt  package.xml
clean_bot_navigation/config/: mapper_params_online_async.yaml
clean_bot_navigation/launch/: navigation.launch.py
docs/: BATTERY_EXPLANATION.md  CHANGELOG_BUG_FIXES.md  CHANGELOG_DOCUMENTATION.md  CHANGELOG_LOGIC.md  CHANGELOG_REMOVED_FILES.md  CHANGELOG_STRUCTURE.md  CHANGELOG_WEB_APP_BUGS.md  Clean_Bot_Flow_Diagrams.md  Clean_Bot_Learning_Guide.md  HOW_IT_WORKS.md  LAUNCH_PROCESS_FLOW.md  USAGE_INSTRUCTIONS.md
my_robot_slam/: CMakeLists.txt  README.md  package.xml
my_robot_slam/arduino_code/: arduino_ros_node.ino
my_robot_slam/config/: docking_demo.rviz  ekf.yaml  mapper_params_online_async.yaml  nav2_params.yaml
my_robot_slam/launch/: bringup.launch.py  complex_demo.launch.py  docking_simulation.launch.py  exploration_mission.launch.py  main.launch.py  online_async_launch.py  visual_demo.launch.py
my_robot_slam/scripts/: arduino_bridge.py  auto_docker.py  autonomous_explorer.py  cmd_vel_mux.py  complex_mission.py  coverage_planner.py  demo_mission.py  dock_detector.py  imu_driver.py  simple_simulation.py
my_robot_slam/test/: test_arduino_bridge.py  test_coverage_planner.py  test_docking_logic.py  test_exploration_mission.py  test_explorer_logic.py  test_imu_driver.py  test_launch.py  test_simulation_integration.py  test_system_integration.py
my_robot_slam/urdf/: my_robot.urdf
sllidar_ros2/sdk/src/arch/linux/: net_serial.cpp
sllidar_ros2/src/: sllidar_node.cpp
